deployando gh-pages

--- a/javier.html
+++ b/javier.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <br>
-        <h1>hola javier</h1>
+        <h1>prueba javier 2</h1>
         <br>
     </div>
 </body>
