deployando gh-pages

--- a/POPTipoesDatosJava.html
+++ b/POPTipoesDatosJava.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"/>
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"/>
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
+
     <title>Tipos de Datos</title>
 
-    <style>
+    <!-- <style>
       .contenedor {
         margin-left: 10em;
         margin-right: 10em;
@@ -37,7 +42,7 @@
     --tw-bg-opacity: 1;
     background-color: rgb(227 227 227 / var(--tw-bg-opacity));
     }
-    </style>
+    </style> -->
   </head>
   <body>
     <div class="contenedor">
