--- a/InstalacionJavaIntellij.html
+++ b/InstalacionJavaIntellij.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"/>
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"/>
+    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
     <title>Primer acercamiento a JAVA</title>
-
+<!-- 
     <style>
       .contenedor {
         margin-left: 10em;
@@ -28,7 +32,7 @@
         /* margin-left: -1em; */
         font-size: 2em;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div class="contenedor">
