--- a/ReactC2AHerramientasConocimientosUtilesAgregandoJSX.html
+++ b/ReactC2AHerramientasConocimientosUtilesAgregandoJSX.html
@@ -21,6 +21,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/cbdf0184859274a8.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
     />
     <title>Agregando JSX</title>
