--- a/ReactC2SHerramientasConocimientosUtiles.html
+++ b/ReactC2SHerramientasConocimientosUtiles.html
@@ -17,6 +17,14 @@
     />
     <link
       rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/6b5d0ae8c6d8f9fa.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/cbdf0184859274a8.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
     />
     <title>Agregando JSX</title>
