deployando gh-pages

--- a/ReactC1ADeJavaScriptVanillaReactIntroduccion.html
+++ b/ReactC1ADeJavaScriptVanillaReactIntroduccion.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <br />
-      <div class="flex flex-col gap-6 grow w-full relative overflow-auto">
+      <div class="">
         <div class="layout">
           <div class="navigator">
             <button class="navigator__button navigator__button_prev">
@@ -60,7 +60,7 @@
             </button>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Bienvenida</h2>
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Introducción a React</h2>
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">
@@ -162,7 +162,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">
@@ -187,7 +187,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">CreateElement</h2>
@@ -224,7 +224,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Create Element</h2>
@@ -237,7 +237,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">¡Vamos a practicar!</h2>
@@ -252,7 +252,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Ejercitación con createElement</h2>
