--- a/ReactC2AHerramientasConocimientosUtilesAgregandoJSX.html
+++ b/ReactC2AHerramientasConocimientosUtilesAgregandoJSX.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <br />
-      <div class="flex flex-col gap-6 grow w-full relative overflow-auto">
+      <div class="">
         <div class="layout">
           <div class="navigator">
             <button class="navigator__button navigator__button_prev">
@@ -58,7 +58,7 @@
             </button>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">¡Bienvenido a la clase 2!</h2>
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Introducción a JSX</h2>
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">El DOM y el Virtual DOM</h2>
@@ -145,7 +145,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Integración de JSX en React</h2>
@@ -180,7 +180,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Introducción a JSX</h2>
@@ -193,7 +193,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Introducción a JSX</h2>
@@ -206,7 +206,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Integración de JSX en React</h2>
@@ -228,7 +228,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">
@@ -250,7 +250,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">React Developer Tools</h2>
@@ -272,7 +272,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">React Developer Tools</h2>
@@ -306,7 +306,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">¡Vamos a practicar!</h2>
@@ -321,7 +321,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Ejercitación JSX</h2>
@@ -394,7 +394,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">
