--- a/ReactC2SHerramientasConocimientosUtiles.html
+++ b/ReactC2SHerramientasConocimientosUtiles.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <br />
-      <div class="flex flex-col gap-6 grow w-full relative overflow-auto">
+      <div class="">
         <div class="layout">
           <div class="navigator">
             <button class="navigator__button navigator__button_prev">
@@ -58,7 +58,7 @@
             </button>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Práctica</h2>
