--- a/ReactC1ADeJavaScriptVanillaReactBienvenida.html
+++ b/ReactC1ADeJavaScriptVanillaReactBienvenida.html
@@ -40,7 +40,7 @@
   <body>
     <div class="container">
       <br />
-      <div class="flex flex-col gap-6 grow w-full relative overflow-auto">
+      <div class="">
         <div class="layout">
           <div class="navigator">
             <div class="navigator__title">
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Módulos</h2>
@@ -138,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Descargá tu programa</h2>
@@ -151,7 +151,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Evaluación</h2>
@@ -164,7 +164,7 @@
             ></iframe>
           </div>
         </div>
-        <div class="block-box">
+        <div class="block-box x">
           <div>
             <div class="block-box__headline">
               <h2 class="block-box__title">Presentación del equipo</h2>
