deployando gh-pages

--- a/ReactC7AComponentesDinamicos.html
+++ b/ReactC7AComponentesDinamicos.html
@@ -315,8 +315,8 @@
               </button>
             </div>
           </div>
-          <div>
-            <a href="https://manzjulio064.github.io/glosariodeterminos/ReactC7AComponentesDinamicos.jpg">Preguntas</a>
+          <div class="md:dh-ml-auto">
+            <a class="badge badge-xs badge-success--outline" href="https://manzjulio064.github.io/glosariodeterminos/ReactC7AComponentesDinamicos.jpg">Preguntas</a>
           </div>
         </div>
       </div>
