deployando gh-pages

--- a/InstalacionJavaIntellij.html
+++ b/InstalacionJavaIntellij.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
+    />
     <title>Primer acercamiento a JAVA</title>
-<!-- 
+
     <style>
       .contenedor {
         margin-left: 10em;
@@ -35,53 +47,123 @@
     </style> -->
   </head>
   <body>
-    <div class="contenedor">
-
-      <br>
-      <br>
-
-      <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/932285504?h=b49188ddd6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPQueEsJava"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
+    <div class="container">
       <br />
-      <p>
-        Ya vimos lo que es Java, sus características…
-        Pero tenemos que escribir los programas y ¿Ahora cómo los hacemos?<br>
-        Tranquilo, para que no sea un trabajo pesado y difícil vamos a usar una IDE (Entorno de desarrollo integrado).
-        Este programa nos va a ayudar a crear proyectos, verificar que estén bien escritos y …  ¡más! <br>
-        Vamos a trabajar con uno de muchos IDE que hay: <span>IntelliJ</span> <br>
-        Ahora veamos como instalarlo
-
-    </p>
-
-    <br>
-    <br>
-
-    <iframe
-    src="https://manzjulio064.github.io/glosariodeterminos/POPInstalaciónIntelliJIdeayJDK.pdf"
-    id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7"
-    class="basic-block-content__content"
-    width="100%"
-    height="800vh"
-    frameborder="0"
-    webkitallowfullscreen="true"
-    mozallowfullscreen="true"
-    allowfullscreen=""
-    title="BlockIframe"
-  ></iframe>
-
-  <br>
-  <br>
-  <p>
-    Ahora, te proponemos ver el siguiente video para repasar el instructivo y despejar cualquier inconveniente al momento de instalar tu entorno de desarrollo y el compilador de Java.
-</p>
-
-<div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/932288948?h=f2bd0917b2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPInstalacionIntellij"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
-</div>
-<br>
-<br>
-<br>
-<br>
-
+      <div class="">
+        <div class="layout">
+          <div class="navigator">
+            <button class="navigator__button navigator__button_prev">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-left icon_md"
+                ></i>
+              </div>
+            </button>
+            <div class="navigator__title">
+              <div class="header">
+                <h2 class="header__title header__title_xs">
+                  Primer acercamiento a JAVA
+                </h2>
+              </div>
+            </div>
+            <button class="navigator__button navigator__button_next">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-right icon_md"
+                ></i>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <div
+              data-testid="VIMEO-player"
+              class="video-block__content video-block__content_rounded"
+              data-vimeo-initialized="true"
+            >
+              <iframe
+                src="https://player.vimeo.com/video/932285504?h=b49188ddd6&amp"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                title="¿Qué es JAVA?"
+                data-ready="true"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <div class="text-block__content">
+              <div>
+                <p>
+                  Ya vimos lo que es Java, sus características… Pero tenemos que
+                  escribir los programas y ¿Ahora cómo los hacemos?<br />
+                  Tranquilo, para que no sea un trabajo pesado y difícil vamos a
+                  usar una IDE (Entorno de desarrollo integrado). Este programa
+                  nos va a ayudar a crear proyectos, verificar que estén bien
+                  escritos y … ¡más! <br />
+                  Vamos a trabajar con uno de muchos IDE que hay:
+                  <span>IntelliJ</span> <br />
+                  Ahora veamos como instalarlo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <iframe
+              src="https://drive.google.com/file/d/1X-vlXRL0JugkmU5emtI3Gsb14IuLzufZ/preview?usp=sharing"
+              allowfullscreen=""
+              title="BlockIframe"
+              class="pdf-block__content pdf-block__content_rounded"
+            ></iframe>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <div class="text-block__content">
+              <div>
+                <p>
+                  Ahora, te proponemos ver el siguiente video para repasar el
+                  instructivo y despejar cualquier inconveniente al momento de
+                  instalar tu entorno de desarrollo y el compilador de Java.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <div
+              data-testid="VIMEO-player"
+              class="video-block__content video-block__content_rounded"
+              data-vimeo-initialized="true"
+            >
+              <iframe
+                src="https://player.vimeo.com/video/932288948?h=f2bd0917b2&amp"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                title="Video Instalación IDE"
+                data-ready="true"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br />
+    </div>
   </body>
 </html>
