--- a/POPEstructuraControlJava.html
+++ b/POPEstructuraControlJava.html
@@ -3,114 +3,125 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
+    />
     <title>Estructura de Control</title>
-<!-- 
-    <style>
-      .contenedor {
-        margin-left: 10em;
-        margin-right: 10em;
-      }
-      /* Estilo para los puntos de la lista */
-      ul {
-        list-style-type: none;
-        padding-left: 20px;
-      }
-
-      li {
-        font-size: 1em;
-      }
-
-      li::before {
-        content: "•";
-        color: red;
-        display: inline-block;
-        width: 1em;
-        /* margin-left: -1em; */
-        font-size: 2em;
-      }
-
-    .block-box {
-    display: flex;
-    max-width: 100%;
-    flex-direction: column;
-    border-radius: .5rem;
-    --tw-bg-opacity: 1;
-    background-color: rgb(227 227 227 / var(--tw-bg-opacity));
-    }
-    </style> -->
   </head>
   <body>
-    <div class="contenedor">
-
-      <br>
-      <br>
-      <br>
-
-      <div class="block-box"><div><h2 class="block-box__title">Estructuras de control en Java</h2><div class="text-block__content"><div>
-        <p>
-            Las estructuras de control en Java tienen la misma sintaxis que en JavaScript. Contamos con:
-        </p>
-      <p>Decisión	if - switch <br>
-      Repetición	while - for</p>
-    <p>
-    A continuación recordemos brevemente cómo es su sintaxis.
-        </p>
-    </div></div></div></div>
-
-
-
-      <br>
-      <br>
-      <br>
-
-
-    <iframe
-    src="https://manzjulio064.github.io/glosariodeterminos/POPJavacheatsheetestructuras.pdf"
-    id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7"
-    class="basic-block-content__content"
-    width="100%"
-    height="800vh"
-    frameborder="0"
-    webkitallowfullscreen="true"
-    mozallowfullscreen="true"
-    allowfullscreen=""
-    title="BlockIframe"
-  ></iframe>
-
-  <br>
-  <br>
-
-  <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/932299585?h=f0408d2cb8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPForJava"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
-  <br>
-  <br>
-
-  <iframe
-  src="https://manzjulio064.github.io/glosariodeterminos/POPEjercitacionestructurasJava.pdf"
-  id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7"
-  class="basic-block-content__content"
-  width="100%"
-  height="800vh"
-  frameborder="0"
-  webkitallowfullscreen="true"
-  mozallowfullscreen="true"
-  allowfullscreen=""
-  title="BlockIframe"
-></iframe>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-</div>
-
+    <div class="container">
+      <br />
+      <div class="">
+        <div class="layout">
+          <div class="navigator">
+            <button class="navigator__button navigator__button_prev">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-left icon_md"
+                ></i>
+              </div>
+            </button>
+            <div class="navigator__title">
+              <div class="header">
+                <h2 class="header__title header__title_xs">
+                  Estructura de control
+                </h2>
+              </div>
+            </div>
+            <button class="navigator__button navigator__button_next">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-right icon_md"
+                ></i>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Estructuras de control en Java</h2>
+            </div>
+            <div class="text-block__content">
+              <div>
+                <p>
+                  Las estructuras de control en Java tienen la misma sintaxis
+                  que en JavaScript. Contamos con:
+                </p>
+                <p>
+                  Decisión if - switch <br />
+                  Repetición while - for
+                </p>
+                <p>A continuación recordemos brevemente cómo es su sintaxis.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Sintaxis Estructuras</h2>
+            </div>
+            <iframe
+              src="https://drive.google.com/file/d/1gKiKUYKE8zqubomeBqN-2j2jtVtJaij-/preview?usp=sharing"
+              allowfullscreen=""
+              title="BlockIframe"
+              class="pdf-block__content pdf-block__content_rounded"
+            ></iframe>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">For</h2>
+            </div>
+            <div
+              data-testid="VIMEO-player"
+              class="video-block__content video-block__content_rounded"
+              data-vimeo-initialized="true"
+            >
+              <iframe
+                src="https://player.vimeo.com/video/932299585?h=f0408d2cb8&amp"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                title="For"
+                data-ready="true"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Ejercicio de estructuras</h2>
+            </div>
+            <iframe
+              src="https://drive.google.com/file/d/1ASUeedpe9LVGITOn1xmGzNigYed-FrZ2/preview?usp=sharing"
+              allowfullscreen=""
+              title="BlockIframe"
+              class="pdf-block__content pdf-block__content_rounded"
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <br />
+    </div>
   </body>
 </html>
