--- a/PopPrimerProgramaJava.html
+++ b/PopPrimerProgramaJava.html
@@ -3,68 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css">
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"/>
-    <link rel="stylesheet" href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css">
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
+    />
     <title>Primer programa</title>
-
-    <!-- <style>
-      .contenedor {
-        margin-left: 10em;
-        margin-right: 10em;
-      }
-      /* Estilo para los puntos de la lista */
-      ul {
-        list-style-type: none;
-        padding-left: 20px;
-      }
-
-      li {
-        font-size: 1em;
-      }
-
-      li::before {
-        content: "•";
-        color: red;
-        display: inline-block;
-        width: 1em;
-        /* margin-left: -1em; */
-        font-size: 2em;
-      }
-    </style> -->
   </head>
   <body>
-    <div class="contenedor">
-
-      <br>
-      <br>
-
-      <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/932294554?h=25b4afd174&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="POPMetodoMainJava"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
+    <div class="container">
       <br />
+      <div class="">
+        <div class="layout">
+          <div class="navigator">
+            <button class="navigator__button navigator__button_prev">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-left icon_md"
+                ></i>
+              </div>
+            </button>
+            <div class="navigator__title">
+              <div class="header">
+                <h2 class="header__title header__title_xs">Primer programa</h2>
+              </div>
+            </div>
+            <button class="navigator__button navigator__button_next">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-right icon_md"
+                ></i>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class=""></div>
+            <div
+              data-testid="VIMEO-player"
+              class="video-block__content video-block__content_rounded"
+              data-vimeo-initialized="true"
+            >
+              <iframe
+                src="https://player.vimeo.com/video/932294554?h=25b4afd174&amp"
+                width="100%"
+                height="100%"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+                title="Método Main"
+                data-ready="true"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="block-box x">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Ejemplo de primer programa</h2>
+            </div>
+            <iframe
+              src="https://drive.google.com/file/d/1x14Wrvls4-8VksFpYzhsxL0HUO1TXYOR/preview?usp=sharing"
+              allowfullscreen=""
+              title="BlockIframe"
+              class="pdf-block__content pdf-block__content_rounded"
+            ></iframe>
+          </div>
+        </div>
+      </div>
       <br />
-      <br />
-
-
-    <iframe
-    src="https://manzjulio064.github.io/glosariodeterminos/POPPrimerprogramaenJava.pdf"
-    id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7"
-    class="basic-block-content__content"
-    width="100%"
-    height="800vh"
-    frameborder="0"
-    webkitallowfullscreen="true"
-    mozallowfullscreen="true"
-    allowfullscreen=""
-    title="BlockIframe"
-  ></iframe>
-
-  <br>
-  <br>
-  <br>
-
-</div>
-
+    </div>
   </body>
 </html>
