deployando gh-pages

--- a/POPArrayJava.html
+++ b/POPArrayJava.html
@@ -1,86 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/d48865cf5505cebc.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/4cb20a70a005a50b.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/dd4497a75999855e.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/6b5d0ae8c6d8f9fa.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/cbdf0184859274a8.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/player.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://manzjulio064.github.io/glosariodeterminos/digitalhousecssstandar.css"
+    />
     <title>Array</title>
+  </head>
+  <body>
+    <div class="container">
+      <br />
+      <div class="">
+        <div class="layout">
+          <div class="navigator">
+            <button class="navigator__button navigator__button_prev">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-left icon_md"
+                ></i>
+              </div>
+            </button>
+            <div class="navigator__title">
+              <div class="header">
+                <h2 class="header__title header__title_xs">Array</h2>
+              </div>
+            </div>
+            <button class="navigator__button navigator__button_next">
+              <div class="navigator__icon">
+                <i
+                  data-testid="icon"
+                  class="uil icon uil-arrow-right icon_md"
+                ></i>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="block-box X">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Array</h2>
+            </div>
+            <iframe
+              src="https://docs.google.com/presentation/d/1-ryWrgqq_8D1BgI0RdYppXiLUwl497Ji/preview?usp=sharing"
+              allowfullscreen=""
+              title="BlockIframe"
+              class="slide-block__content slide-block__content_rounded"
+            ></iframe>
+          </div>
+        </div>
+        <div class="block-box X">
+          <div>
+            <div class="block-box__headline">
+              <h2 class="block-box__title">Ejemplo de código</h2>
+            </div>
+            <div class="text-block__content">
+              <div>
+                <p>
+                  Compartimos un ejemplo en Java, al descargarlo podrás tener el
+                  código con las diferentes maneras de recorrer una colección.
+                  Deberás descomprimir el archivo y luego abrir el proyecto en
+                  IntelliJ IDEA y hacer clic en Abrir -&gt; Open, simplemente
+                  seleccionando la carpeta descomprimida.
+                </p>
+                <a
+                  href="https://drive.google.com/file/d/1AoB1hb3sQm5_qwkfz-l9ukxbJwWZU_lc/view?usp=sharing"
+                  >Acceso</a
+                >
+                <a href="https://manzjulio064.github.io/glosariodeterminos/POPDH-Arrays.zip">Acceso2</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <style>
-
-      .contenedor {
-        margin-left: 10em;
-        margin-right: 10em;
-      }
-      /* Estilo para los puntos de la lista */
-      ul {
-          list-style-type: none;
-          padding-left: 20px;
-      }
-
-      li {
-            font-size: 1em;
-        }
-
-      li::before {
-          content: "•";
-          color: red;
-          display: inline-block;
-          width: 1em;
-          /* margin-left: -1em; */
-          font-size: 2em;
-      }
-
-      .block-box__title {
-        font-family: Montserrat, sans-serif;
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: 600;
-        --tw-text-opacity: 1;
-        color: rgb(0 0 0 / var(--tw-text-opacity));
-      }
-
-      .text-block__content {
-        padding: .75rem 1rem;
-        --tw-text-opacity: 1;
-        color: rgb(0 0 0 / var(--tw-text-opacity));
-      }
-
-      .block-box {
-          display: flex;
-          max-width: 100%;
-          flex-direction: column;
-          border-radius: .5rem;
-          --tw-bg-opacity: 1;
-          background-color: rgb(227 227 227 / var(--tw-bg-opacity));
-      }
-  </style>
-
-</head>
-<body>
-  <div class="contenedor">
-
-    <br>
-    <br>
-    <br>
-
-    <iframe src="https://manzjulio064.github.io/glosariodeterminos/POPArraydiferenciaconcoleccionesJava.pdf" id="BasiBlockIframe756a6e59-d57b-4516-8325-5ef2f56a52c7" class="basic-block-content__content" width="100%" height="800vh" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="" title="BlockIframe"></iframe>
-
-<br>
-<br>
-<br>
-<div class="block-box"><div><h2 class="block-box__title">Ejemplo de código</h2><div class="text-block__content"><div>
-  <p>
-      Compartimos un ejemplo en Java, al descargarlo podrás tener el código con las diferentes maneras de recorrer una colección. Deberás descomprimir el archivo y luego abrir el proyecto en IntelliJ IDEA y hacer clic en Abrir -&gt; Open, simplemente seleccionando la carpeta descomprimida.
-  </p>
-  <a href="https://drive.google.com/file/d/1AoB1hb3sQm5_qwkfz-l9ukxbJwWZU_lc/view?usp=sharing">Acceso</a>
-  <a href="https://manzjulio064.github.io/glosariodeterminos/POPDH-Arrays.zip">Acceso2</a>
-</div></div></div></div>
-
-
-<br>
-<br>
-<br>
-<br>
-  </div>
-</body>
+      <br />
+    </div>
+  </body>
 </html>
